toxxi/tests/snapshots/ui_golden_test__chat_interaction.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Alice - Happy                                          
  ▼ System              │                                                       
    ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
┃   ● Alice             │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
  ▼ 🧑‍🤝‍🧑 Conferences      │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │[12:00] ● Alice | Hello there!                         
[12:00] [Offline] <Tester> [Online] [0:Status] [1:Alice]                        
╭──────────────────────────────────────────────────────────────────────────────╮
│> General Kenobi!                                                             │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
