toxxi/tests/snapshots/ui_golden_test__command_menu_popup.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Alice - Happy                                          
  ▼ System              │                                                       
    ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
┃   ● Alice             │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
╭──────────────────────────────────────────────────────────────────────────────╮
│> /accept       [index]                     Accept a pending request or invite│
│  /block        [add|remove|list] [string]  Manage blocked strings (case-inse…│
│  /clear        [all | system]             Clear the current window's messages│
│  /close         Close the current window (and leave if it's a group or confe…│
│  /conference   create | join ... | invite ...              Manage conferences│
│  /file         send <fid> <path> | accept ...           Manage file transfers│
│  /friend       add <tox_id> [msg] | remove <id>                Manage friends│
│  /friends                                                        List friends│
╰─────────────────────────────────────────────────── (1/32) [Tab] to complete ─╯
╭──────────────────────────────────────────────────────────────────────────────╮
│> /                                                                           │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
