toxxi/tests/snapshots/ui_golden_test__input_lorem_ipsum.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Bob - Reading                                          
  ▼ System              │                                                       
    ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
┃   ● Bob               │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
  ▼ 🧑‍🤝‍🧑 Conferences      │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
[12:00] [Offline] <Tester> [Online] [0:Status] [1:Bob]                          
╭──────────────────────────────────────────────────────────────────────────────╮
│> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tem↳│
│  por incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, q↳│
│  uis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo cons↳│
│  equat.                                                                      │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
