toxxi/tests/snapshots/ui_golden_test__input_lorem_ipsum_sent.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered_sent
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Bob - Reading                                          
  ▼ System              │                                                       
    ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
┃   ● Bob               │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
  ▼ 🧑‍🤝‍🧑 Conferences      │                                                       
                        │                                                       
                        │[12:00] ○ Tester | Lorem ipsum dolor sit amet,        ↳
                        │                 | consectetur adipiscing elit. Sed do↳
                        │                 | eiusmod tempor incididunt ut labore↳
                        │                 | et dolore magna aliqua. Ut enim ad ↳
                        │                 | minim veniam, quis nostrud         ↳
                        │                 | exercitation ullamco laboris nisi  ↳
                        │                 | ut aliquip ex ea commodo consequat. 
[12:00] [Offline] <Tester> [Online] [0:Status] [1:Bob]                          
╭──────────────────────────────────────────────────────────────────────────────╮
│>                                                                             │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
