toxxi/tests/snapshots/ui_golden_test__input_multiline_sent.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered_sent
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Bob - Reading                                          
  ▼ System              │                                                       
    ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
┃   ● Bob               │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
  ▼ 🧑‍🤝‍🧑 Conferences      │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │[12:00] ○ Tester | Line 1                              
                        │                 | Line 2                              
[12:00] [Offline] <Tester> [Online] [Multi: Ctrl+D to send] < [1:Bob]           
╭──────────────────────────────────────────────────────────────────────────────╮
│>                                                                             │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
