toxxi/tests/snapshots/ui_golden_test__multiple_friends.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Bob                                                    
  ▼ System              │                                                       
    ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
┃   ● Bob               │                                                       
    ● Charlie (1)       │                                                       
    ○ Dave              │                                                       
    ● Eve               │                                                       
    ● Frank             │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
  ▼ 🧑‍🤝‍🧑 Conferences      │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
[12:00] [Offline] <Tester> [Online] [0:Status] [1:Bob] [2:Charlie(1)]  >        
╭──────────────────────────────────────────────────────────────────────────────╮
│>                                                                             │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
