toxxi/tests/snapshots/ui_golden_test__popup_completion_position.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Alice - Happy                                          
  ▼ System              │                                                       
    ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
┃   ● Alice             │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
  ▼ 🧑‍🤝‍🧑 Conferences      │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
         ┌ Candidates ──────┐                                                   
         │> Alice           │                                                   
[12:00] [Offline] <Tester> [Online] [0:Status] [1:Alice]                        
╭──────────────────────────────────────────────────────────────────────────────╮
│> Hello Alice                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
